Improve audit properties handling to be hibernate comapttible
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>